tests/ui/bad-bound.stderr
error: expected rustc release number, like 1.31
 --> $DIR/bad-bound.rs:1:22
  |
1 | #[rustversion::since(stable)]
  |                      ^^^^^^
