tests/ui/bad-bound.rs
#[rustversion::since(stable)]
struct S;

fn main() {}
